# discodigg

./: .dockerignore  .gitignore  Cargo.toml  README.md  devenv.nix  justfile  scala-cli.yaml  servers.yml
.github/workflows/: build.yml
docker/: Dockerfile
k8s/base/: discodigg.yaml  init.yaml  kustomization.yaml  servers.yaml  service.yaml
requests/: discord.http
src/: Collector.scala  Discord.scala  LoggerSetup.scala  Main.scala  ServersMap.scala  WebServer.scala  discord.rs  invites.rs  lib.rs  main.rs  stats.rs
