[package]
name = "discodigg"
version = "0.0.2"
edition = "2024"
default-run = "discodigg"

[[bin]]
name = "discodigg"
path = "src/bin/cli.rs"

[[bin]]
name = "discodigg-server"
path = "src/bin/server.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
duckdb = { version = "1.3.2", features = ["bundled"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
reqwest = { version = "0.12.23", features = ["json"] }
rust-yaml = { version = "0.0.5", features = ["serde", "tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
